Changelog
=========

1.5.5 (unreleased)
------------------

- Nothing changed yet.


1.5.4 (2012-08-17)
------------------

- Remove creation flag once content has been created
  and file loaded.
  [thomasdesvenain]

- Updated zh-tw and it translations.
  [l34marr, giacomos]

1.5.3 (2012-07-13)
------------------

- Fixed title generation 
  if we have more than one "." character in file name.
  Fixes http://plone.org/products/collective.quickupload/issues/24
  [Manuel Reinhart, thomasdesvenain]

- Portlet form doesn't break
  when a content type implements IFileContent and IImageContent.
  Fixes http://github.com/collective/collective.quickupload/issues/9.
  [vito80ba, thomasdesvenain]

- Works without plone.uuid
  (for example with a Plone 4.0.x basic install).
  [frisi, do3cc, thomasdesvenain]

- Updated chinese translation.
  [jianaijun]


1.5.2 (2012-06-29)
------------------

- Fixed upload when filename has special characters under IE.
  [thomasdesvenain]


1.5.1 (2012-05-24)
------------------

- Fixed Spanish language code.
  [thomasdesvenain]

1.5 (2012-05-24)
----------------

- Use IUUID adapter instead of UID method in order to make it work also
  with Dexterity items.
  [avoinea]

- We can update existing files through quickupload.
  If user try to upload a file that already exists,
  if he is allowed to modify this existing object,
  the file, title and description fields are replaced with new values.
  [thomasdesvenain]

- German translations completed.
  [mathias.leimgruber]

- Raises MissingExtension exception when filename does not have the extension.
  [taito]

1.4 (2012-03-14)
----------------

- Fix CSS images for sites using virtual host _vh_ components.
  [dokai]

- Hide buttons after clearing the queue.
  [giacomos]

- Trigger custom JS events after each file upload and also when all files
  were uploaded
  [avoinea]

- Updated responseJSON with more info about the uploaded file
  (uid, title and name)
  [avoinea]
